--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -43,6 +43,11 @@
     --footer_bg_color: #dcdcdcad;
     --footer_bg_hover_color: #cacacab7;
 
+    --modal_blur_bg_color: #a29c9ca6;
+    --add_modal_min_width: 900px;
+    --add_modal_detail_inp_min_height: 250px;
+    --add_modal_detail_inp_max_height: 350px;
+
     --main_radial_color: radial-gradient(
         circle,
         rgba(224, 216, 47, 1) 30%,
@@ -334,6 +339,38 @@ body {
     animation: vanish 560ms ease;
 }
 
+.sideBtnAddList {
+    position: absolute;
+    width: max-content;
+    font-size: 1rem;
+    padding: 0.8em 1.6em;
+    background-color: var(--snow_white_color);
+    border-radius: 6px;
+
+    top: -175%;
+    left: 70%;
+    z-index: 20;
+    cursor: pointer;
+    box-shadow: var(--card_secondary_box_shadow);
+
+    display: none;
+}
+
+.sideBtnAddItem {
+    width: 100%;
+    font-size: 1.66rem;
+    color: var(--black_text);
+    font-weight: 500;
+    padding: 0.6em 0;
+
+    transition: all 360ms ease;
+}
+
+.sideBtnAddItem:hover {
+    color: var(--primary_color);
+    transform: scale(1.06);
+}
+
 .sideBtnWrapper:hover {
     border-radius: 100px;
     background-color: var(--light_primary_color);
@@ -344,8 +381,10 @@ body {
     transform: rotate(180deg);
 }
 
-.sideBtnWrapper:hover .sideBtnTitle {
+.sideBtnWrapper:hover .sideBtnTitle,
+.sideBtnWrapper:hover .sideBtnAddList {
     display: flex;
+    flex-direction: column;
     animation: appear 360ms ease;
 }
 
@@ -399,7 +438,7 @@ body {
     display: none;
 }
 
-.todoWrapper.active {
+.todoWrapper.show {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(auto-fit, minmax(60px, 80px));
@@ -473,18 +512,18 @@ body {
     display: none;
 }
 
-.tCardCheckBoxBlank.active {
+.tCardCheckBoxBlank.show {
     display: flex;
     color: var(--black_text);
 }
 
-.tCardCheckBoxCheck.active {
+.tCardCheckBoxCheck.show {
     display: flex;
     color: var(--green_color);
 }
 
-.tCardCheckBoxWrapper:hover .tCardCheckBoxBlank.active,
-.tCardCheckBoxWrapper:hover .tCardCheckBoxCheck.active {
+.tCardCheckBoxWrapper:hover .tCardCheckBoxBlank.show,
+.tCardCheckBoxWrapper:hover .tCardCheckBoxCheck.show {
     color: var(--light_green_color);
 }
 
@@ -620,7 +659,7 @@ body {
     display: none;
 }
 
-.notesWrapper.active {
+.notesWrapper.show {
     height: 100%;
     font-size: 1rem;
     display: grid;
@@ -755,4 +794,314 @@ body {
 .srcLink:hover {
     font-weight: 600;
     transform: scale(1.14);
+}
+
+/* =============================================== */
+/* MODAL SETUP  */
+/* =============================================== */
+.modalWrapper {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 50;
+
+    background-color: var(--modal_blur_bg_color);
+    backdrop-filter: blur(10px);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    position: relative;
+}
+
+.addItemModal {
+    min-width: var(--add_modal_min_width);
+    max-width: 1000px;
+    font-size: 1rem;
+    padding: 2.6em 3.6em;
+    background-color: var(--snow_white_color);
+    border-radius: 12px;
+
+    display: none;
+}
+
+.addItemModal.show {
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+}
+
+.addModalHeading {
+    margin-top: 0.36em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.addModalHeadingAction {
+}
+
+.addModalHeading,
+.addModalHeadingAction,
+.addModalHeadingType {
+    font-size: 5.6rem;
+    color: var(--black_text);
+    cursor: default;
+}
+
+.addModalHeadingType {
+    margin-left: 0.2em;
+    text-transform: capitalize;
+}
+
+.addModalBody {
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    gap: 2.6em;
+}
+
+.addModalBodyTop {
+    font-size: 1rem;
+    margin-top: 1.6em;
+    display: grid;
+    grid-template-columns: 1.5fr 9fr;
+}
+
+.addModalBodyTop:has(.addModalDetailLabel.show) {
+    grid-template-rows: 1fr 5fr;
+}
+
+.addModalTitleLabel,
+.addModalDetailLabel,
+.addModalTitleLabel span,
+.addModalDetailLabel span,
+.addModalTitleInp,
+.addModalDetailInp,
+.addModalDateInp,
+.addModalDateLabel,
+.addModalPriorityLabel {
+    font-size: 2rem;
+    color: var(--black_text);
+}
+
+.addModalTitleLabel,
+.addModalDetailLabel,
+.addModalTitleLabel span,
+.addModalDetailLabel span {
+    user-select: none;
+    place-self: center start;
+}
+
+.addModalTitleLabel {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.addModalTitleInp,
+.addModalDetailInp {
+    padding: 0.26em 0.6em;
+
+    border: none;
+    background-color: var(--snow_white_color);
+    outline: none;
+}
+
+.addModalTitleInp::placeholder,
+.addModalDetailInp::placeholder {
+    color: var(--dark_gray_color);
+    font-weight: 500;
+}
+
+.addModalTitleInp {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.addModalDetailLabel,
+.addModalDetailInp {
+    margin-top: 0.8em;
+    display: none;
+}
+
+.addModalDetailLabel.show,
+.addModalDetailInp.show {
+    display: flex;
+}
+
+.addModalDetailLabel.show {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+
+    align-self: start;
+    position: relative;
+    top: 0.26em;
+}
+
+.addModalDetailInp.show {
+    position: relative;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+    padding-top: 0.26em;
+    padding-left: 0.6em;
+    min-height: var(--add_modal_detail_inp_min_height);
+    max-height: var(--add_modal_detail_inp_max_height);
+}
+
+.addModalDetailInp.show::placeholder {
+    position: absolute;
+    top: 0.26em;
+    left: 0.6em;
+}
+
+.addModalBodyBottom {
+    display: none;
+}
+
+.addModalBodyBottom.show {
+    font-size: 1rem;
+    display: grid;
+    grid-template-columns: 1.5fr 9fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 2em;
+}
+
+.addModalDateLabel {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    place-self: center start;
+}
+
+.addModalDateInp {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    place-self: center start;
+}
+
+.addModalPriorityLabel {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    place-self: center start;
+}
+
+.addModalPriorityWrapper {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1.6em;
+}
+
+.addModalPriorityBtn {
+    font-size: 2rem;
+    padding: 0.2em 0.8em;
+    font-weight: 500;
+    border-radius: 6px;
+    outline: none;
+    border-color: transparent;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.addModalPriorityBtn[value='low'] {
+    color: var(--green_color);
+    border: 2px solid var(--green_color);
+}
+
+.addModalPriorityBtn[value='low']:hover {
+    color: var(--white_text);
+    border: 2px solid var(--light_green_color);
+    background-color: var(--light_green_color);
+}
+
+.addModalPriorityBtn[value='medium'] {
+    color: var(--yellow_color);
+    border: 2px solid var(--yellow_color);
+}
+
+.addModalPriorityBtn[value='medium']:hover {
+    color: var(--white_text);
+    border: 2px solid var(--light_yellow_color);
+    background-color: var(--light_yellow_color);
+}
+
+.addModalPriorityBtn[value='high'] {
+    color: var(--red_color);
+    border: 2px solid var(--red_color);
+}
+
+.addModalPriorityBtn[value='high']:hover {
+    color: var(--white_text);
+    border: 2px solid var(--light_red_color);
+    background-color: var(--light_red_color);
+}
+
+.addModalFooter {
+    font-size: 1rem;
+    margin-top: 1.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.addModalBtn,
+.addModalBtnAction,
+.addModalBtnType {
+    font-size: 2.4rem;
+    color: var(--black_text);
+    font-weight: 700;
+}
+
+.addModalBtn {
+    padding: 0.4em 1.2em;
+    border-radius: 8px;
+    outline: none;
+    border-color: transparent;
+    cursor: pointer;
+
+    background-color: var(--primary_color);
+}
+
+.addModalBtn:hover,
+.addModalBtn:hover > * {
+    color: var(--white_text);
+    background-color: var(--light_primary_color);
+}
+
+.addModalBtnType {
+    display: none;
+}
+
+.addItemModal.show[data-action='add'] .addModalBtnType {
+    display: inline-block;
+}
+
+.addModalCloseWrapper {
+    font-size: 1rem;
+    position: absolute;
+    top: 1.8em;
+    right: 1.8em;
+    padding: 0.4em;
+
+    cursor: pointer;
+}
+
+.addModalCloseIcon {
+    color: var(--dark_red_color);
+    transition: all 360ms ease;
+}
+
+.addModalCloseWrapper:hover .addModalCloseIcon {
+    color: var(--red_color);
+    transform: scale(1.26);
 }
