Added localStorageVerify to check local save info from user. Added datesHandler to verify and sort to-do by day/week. Added sideBar to handle sideBar list logic. Added screenHandler to manipulate screen. Currently handling sideBar list

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -243,6 +243,7 @@ body {
     font-size: 3.6rem;
     font-weight: 300;
     color: var(--black_text);
+    text-transform: capitalize;
 
     transition-property: all;
     transition-duration: 600ms;
@@ -411,10 +412,6 @@ body {
 .sideItem:hover .sideItemText,
 .sideProjectItem:hover .projectItemText {
     transform: translate(0.4em, 0.1em);
-}
-
-.sideItem:hover .sideItemText,
-.sideProjectItem:hover .projectItemText {
     color: var(--primary_color);
     font-weight: 500;
 }
@@ -442,7 +439,7 @@ body {
     grid-row: 2 / 3;
 
     font-size: 1rem;
-    padding: 3em 4.6em ;
+    padding: 3em 4.6em;
     background-color: var(--white_color);
     /* margin-bottom: 0.8em; */
 
@@ -501,6 +498,7 @@ body {
 .todoCard:hover {
     box-shadow: var(--card_primary_box_shadow);
     transform: scale(1.01);
+    background-color: var(--footer_bg_color);
 }
 
 .todoCard.done {
