--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -84,11 +84,11 @@ ul {
 @keyframes appear {
     from {
         opacity: 0;
-        display: none;
+        /* display: none; */
     }
     to {
         opacity: 1;
-        display: flex;
+        /* display: flex; */
     }
 }
 
@@ -96,6 +96,7 @@ ul {
     from {
         opacity: 1;
         display: flex;
+        /* display: grid; */
     }
     to {
         opacity: 0;
@@ -848,22 +849,29 @@ body {
     background-color: var(--modal_blur_bg_color);
     backdrop-filter: blur(10px);
 
+    /* display: none;
+    animation: appear 100ms ease; */
+
     display: none;
-    animation: appear 100ms ease;
+    opacity: 0;
+    animation: vanish 160ms ease;
 }
 
 .modalWrapper.show {
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: vanish 100ms ease;
+    /* animation: vanish 600ms ease; */
+
+    opacity: 1;
+    animation: appear 660ms ease;
 }
 
 .modal {
     position: relative;
 }
 
-.addEditItemModal {
+.addEditItemFormModal {
     min-width: var(--add_edit_modal_min_width);
     max-width: 1000px;
     font-size: 1rem;
@@ -874,7 +882,7 @@ body {
     display: none;
 }
 
-.addEditItemModal.show {
+.addEditItemFormModal.show {
     font-size: 1rem;
     display: flex;
     flex-direction: column;
@@ -901,7 +909,7 @@ body {
 
 .addEditModalHeadingType {
     margin-left: 0.2em;
-    text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 .addEditModalBody {
@@ -1152,10 +1160,11 @@ body {
 }
 
 .addEditModalBtnType {
+    text-transform: capitalize;
     display: none;
 }
 
-.addEditItemModal.show[data-action='add'] .addEditModalBtnType {
+.addEditItemFormModal.show[data-action='add'] .addEditModalBtnType {
     display: inline-block;
 }
 
